Actions
Bug #10138
closedsmatch fixes for usr/src/cmd/sgs
Start date:
2018-12-19
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
Description
Fix a few smatch lint reports.
Updated by Electric Monk over 3 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 7d732bb0c50cbe80dedb2fdedd5ecfa51b90c302
commit 7d732bb0c50cbe80dedb2fdedd5ecfa51b90c302 Author: John Levon <john.levon@joyent.com> Date: 2019-02-11T17:07:42.000Z 10138 smatch fixes for usr/src/cmd/sgs Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions