10138 smatch fixes for usr/src/cmd/sgs Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Dan McDonald <danmcd@joyent.com>